add certifcations to CV

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -11,6 +11,7 @@ layout: default
     <div>
       <div class="entries">
         {% include cv/basics.html %}
+        {% include cv/certification.html %}
         {% include cv/work.html %}
         {% include cv/volunteer.html %}
         {% include cv/education.html %}
